springboot+cloud+vue 测试

--- a/common/common_utils/pom.xml
+++ b/common/common_utils/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common_utils</artifactId>
-
+<!--单点登录使用-->
+    <dependencies>
+        <!-- JWT-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
