--- a/service/service_edu/pom.xml
+++ b/service/service_edu/pom.xml
@@ -11,5 +11,14 @@
 
     <artifactId>service_edu</artifactId>
 
+   <dependencies>
+       <!--操作excel文件的yelai-->
+       <dependency>
+           <groupId>com.alibaba</groupId>
+           <artifactId>easyexcel</artifactId>
+           <version>2.1.1</version>
+       </dependency>
+
+   </dependencies>
 
 </project>
