--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # 服务端口
 server.port=8001
+
+spring.application.name=service-edu
 # 环境设置：dev、test、prod
 spring.profiles.active=dev
 # mysql数据库连接
@@ -10,7 +12,14 @@ spring.datasource.password=123456
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+# nacos服务地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+#配置mapper xml文件的路径
+mybatis-plus.=classpath:com/ithr/eduservice/mapper/xml/*.xml
 #设置日志级别 设置这个就可以随心所欲 如果错误可能info要大写
 #logging.level.root=info
 #batis日志
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#开启垄断机制
+feign.hystrix.enabled=true
