--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.application.name=service-oss
 
 #环境设置：dev、test、prod
 spring.profiles.active=dev
-
+# nacos服务地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #阿里云 OSS
 #不同的服务器，地址不同
 aliyun.oss.file.endpoint=oss-cn-beijing.aliyuncs.com
@@ -13,6 +14,4 @@ aliyun.oss.file.keyid=LTAI4FskHAVMRpou48tzgzyV
 aliyun.oss.file.keysecret=EWTiEYRpvdVNRbnHCgZt1RbFC7MyF6
 #bucket可以在控制台创建，也可以使用java代码创建
 aliyun.oss.file.bucketname=edu-springboot-cloud-vue
-
-
 
